# GnuCash-Dashboard

./: .coverage  .gitignore  README.md  pyproject.toml
data/: Dev.gnucash
src/adapters/: compare_backends_cli.py  sync_accounts_cli.py  sync_gnucash_analytics_cli.py  test_db_connection.py
src/adapters/interface/: __init__.py
src/application/ports/: __init__.py  database.py  (+5 more)
src/domain/: __init__.py  constants.py
src/infrastructure/: accounts_repository.py  accounts_sync.py  accounts_tree_repository.py  analytics_gnucash_repository.py  analytics_views_repository.py  container.py  db.py  gnucash_repository.py  gnucash_repository_factory.py  piecash_compat.py  piecash_repository.py  settings.py
src/utils/: decimal_utils.py  utils.py
tests/: conftest.py
tests/adapters/: test_compare_backends_cli.py  test_db_connection_cli.py  test_interface_modules.py  test_sync_accounts_cli.py
tests/application/: test_account_filters.py  test_compare_backends_use_case.py  test_get_account_balances_use_case.py  test_get_accounts_use_case.py  test_get_asset_category_breakdown_use_case.py  test_get_cashflow_use_case.py  test_get_net_worth_summary_use_case.py  test_gnucash_repository_contracts.py  test_sync_accounts_use_case.py  test_sync_gnucash_analytics.py
tests/infrastructure/: test_container_analytics_repository.py  test_db_module.py  test_gnucash_repository_factory.py  test_piecash_accounts_source.py  test_piecash_compat.py  test_piecash_repository.py  test_settings.py
tests/interface/: test_asset_account_candidates.py  test_sankey_cashflow.py  test_streamlit_app.py
(+31 files in other folders)
