[project]
name = "GnuCash-Dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.52.1",
    "sqlalchemy<2.0",
    "psycopg[binary,pool]>=3.1.0",
    "dotenv>=0.9.9",
    "psycopg2>=2.9.11",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "setuptools>=80.9.0",
    "piecash>=1.1.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
